# basic-things

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_FINAL.md.liquid  Cargo.toml  README.md  README.md.liquid  SECURITY.md  SECURITY.md.liquid  book.toml  cargo-generate.toml  cliff.toml  cliff.toml.liquid  rustfmt.toml  taplo.toml  template.sh
.github/workflows/: ci.yaml  ci.yaml.liquid  release.yaml  release.yaml.liquid
cargo_generate/: script.rhai  values.toml
cargo_generate/licenses/: BSD-2.md  BSD-3.md  GNU-GPL-2.md  MIT.md
cargo_generate_hooks/: init.rhai  script.rhai
crates/common/: Cargo.toml
crates/common/src/: lib.rs
