[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["{{ authors }}"]
edition = "2021"
exclude = ["/.github"]
license = "{{ license }}"
readme = "README.md"
repository = "https://github.com/{{ repository_path }}"
version = "0.1.0"

[workspace.dependencies]

[workspace.lints.rust]
missing_docs = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
self_named_module_files = "deny"

[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html#avoid-linking-debug-info
debug = 0
strip = "debuginfo"
